--- a/src/com/railway/reservation/Login.form
+++ b/src/com/railway/reservation/Login.form
@@ -26,12 +26,12 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lablelLoginID" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lablelLoginUserName" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="labelLoginPassword" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="textLoginID" pref="246" max="32767" attributes="0"/>
+                  <Component id="textLoginUserName" pref="246" max="32767" attributes="0"/>
                   <Component id="textLoginPassword" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="243" max="-2" attributes="0"/>
@@ -57,8 +57,8 @@
               <Component id="loginHeader" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="textLoginID" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lablelLoginID" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="textLoginUserName" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lablelLoginUserName" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -84,14 +84,14 @@
         <Property name="text" type="java.lang.String" value="Login"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="textLoginID">
+    <Component class="javax.swing.JTextField" name="textLoginUserName">
     </Component>
-    <Component class="javax.swing.JLabel" name="lablelLoginID">
+    <Component class="javax.swing.JLabel" name="lablelLoginUserName">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="ID"/>
+        <Property name="text" type="java.lang.String" value="Username"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="labelLoginPassword">
